メソッドフィルタリング機能の改善とCSV出力の最適化。
- isRegularMethodメソッドを抽出してメソッドフィルタリング処理を共通化
- CSV出力でメソッド、フィールド、コンストラクタをソート
- Collectors.toList()をtoList()に置き換え（Java 16以降対応）
- コードの可読性と保守性を向上

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>